# stockfighter-hs

./: .gitignore  LICENSE  README.md  stack.yaml  stockfighter-hs.cabal
app/: Main.hs
app/Stockfighter/: UI.hs
app/Stockfighter/UI/: Padding.hs  Reactive.hs
src/: Stockfighter.hs
src/Stockfighter/: Client.hs  Types.hs
src/Stockfighter/Client/: Internal.hs
