name:                stockfighter-hs
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/stockfighter-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Stockfighter.Client
                     , Stockfighter.Types
  other-modules:       Stockfighter.Client.Internal
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , lens
                     , lens-aeson
                     , mtl
                     , time
                     , transformers
                     , wreq
  default-language:    Haskell2010

executable stockfighter-hs-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , stockfighter-hs
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/stockfighter-hs
