name:                stockfighter-hs
version:             0.1.0.0
synopsis:            A terminal client and haskell library for stockfighter
description:         Please see README.md
homepage:            http://github.com/cnr/stockfighter-hs/
license:             MIT
license-file:        LICENSE
author:              Connor James
maintainer:          Connor James
copyright:           (c) Connor James 2016
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Stockfighter
                     , Stockfighter.Client
                     , Stockfighter.Types
  other-modules:       Stockfighter.Client.Internal
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , lens
                     , lens-aeson
                     , mtl
                     , time
                     , transformers
                     , websockets
                     , wreq
                     , wuss ==1.0.2
  default-language:    Haskell2010

executable stockfighter-hs-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Stockfighter.UI.Padding
                     , Stockfighter.UI.Reactive
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , stockfighter-hs
                     , brick
                     , data-default
                     , lens
                     , mtl
                     , vty
                     , reactive-banana ==1.1.0.0
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cnr/stockfighter-hs.git
